# rust-sfml-modstream

./: Cargo.toml  rustfmt.toml
examples/: play.rs
src/: lib.rs  string.rs
