[package]
name = "sfml-modstream"
version = "0.1.1"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
description = "Custom SFML SoundStream for playing modules"
license = "zlib-acknowledgement"
repository = "https://github.com/crumblingstatue/rust-sfml-modstream"
keywords = ["sfml", "mod", "module", "music"]

[dependencies]
openmpt-sys = "0.1.0"

[dependencies.sfml]
version = "0.14"
default-features = false
features = ["audio"]
