[package]
name = "sfml-modstream"
version = "0.3.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
description = "Custom SFML SoundStream for playing modules"
license = "zlib-acknowledgement"
repository = "https://github.com/crumblingstatue/rust-sfml-modstream"
keywords = ["sfml", "mod", "module", "music"]

[dependencies.openmpt-sys]
version = "0.2.0"

[dependencies.sfml]
version = "0.18.1"
default-features = false
features = ["audio"]
